meja/tests/shadowing-module-type.stderr
File "tests/shadowing-module-type.meja", line 5, characters 12-13:
Error: There is already a module type with name M.
