meja/tests/shadowing-module-type.meja
module type M = {
  type t;
};

module type M = {
  type u;
};
